# whatsapp-python

./: pyproject.toml  setup.py
whatsapp/: __init__.py  config.py  whatsapp.py
